# OTrader

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
Otrader_cpp/: ARCHITECTURE.md  ARCHITECTURE_EN.md  README.md  entry_backtest.cpp  entry_live.cpp  entry_live_grpc.cpp
Otrader_cpp/core/: engine_combo_builder.cpp  engine_combo_builder.hpp  engine_execution.cpp  engine_execution.hpp  engine_hedge.cpp  engine_hedge.hpp  engine_log.cpp  engine_log.hpp  engine_option_strategy.cpp  engine_option_strategy.hpp  engine_position.cpp  engine_position.hpp  log_sink.hpp  runtime_api.hpp
Otrader_cpp/infra/db/: engine_db_pg.cpp  engine_db_pg.hpp
Otrader_cpp/infra/gateway/: engine_gateway_ib.cpp  engine_gateway_ib.hpp
Otrader_cpp/proto/: otrader_engine.proto
Otrader_cpp/runtime/backtest/: engine_event.cpp  (+5 more)
Otrader_cpp/strategy/: high_frequency_momentum.cpp  high_frequency_momentum.hpp  strategy_registry.cpp  strategy_registry.hpp  template.cpp  template.hpp
Otrader_cpp/utilities/: base_engine.hpp  black_scholes.cpp  black_scholes.hpp  constant.hpp  event.hpp  ib_mapping.hpp  lets_be_rational_api.hpp  object.cpp  object.hpp  occ_utils.cpp  occ_utils.hpp  parquet_loader.cpp  parquet_loader.hpp  portfolio.cpp  portfolio.hpp  types.hpp  utility.cpp  utility.hpp
backend/: requirements.txt
backend/src/: main.py
doc/graph/: deisgn.puml
doc/zh/: doc_strategy.md  readme_zh.md
engines/: engine_data.py  engine_event.py  engine_position.py
frontend/pages/: strategy-manager.html
setting/: strategy_data.yaml  strategy_setting.yaml
strategies/tests/: test.py
tools/: __init__.py  helper_3_wipe_tradingLog.py  test_1_system_check.py
utilities/: base_engine.py  constant.py  object.py  portfolio.py  sql_schema.py
v1_python/: README.md  run_script.py  run_server.py
v1_python/backend/: README.md
v1_python/doc/: doc_engines.md  doc_strategy.md
v1_python/engines/: __init__.py  engine_comboBuilder.py  engine_db.py  engine_gateway.py  engine_hedge.py  engine_log.py  engine_main.py  engine_strategy.py
v1_python/frontend/: README.md
v1_python/setting/: strategy_data.yaml  strategy_setting.yaml
v1_python/strategies/: template.py
v1_python/tools/: helper_1_query.py  helper_2_portfolio_dte.py  helper_4_delete_portfolio.py  helper_5_print_orders_trades.py  test_2_inspect_portfolio.py  test_3_contract_retrival.py
v1_python/utilities/: event.py  utility.py
v2_cpp_WIP/cpp_engines/: ARCHITECTURE_EN.md
v2_cpp_WIP/cpp_engines/utilities/: CMakeLists.txt  base_engine.hpp  constant.hpp  event.hpp
(+62 files in other folders)
